# TLS

./: README.md  build.sh
Client/: CMakeLists.txt  data.json
Client/src/: client.cpp
Server/: CMakeLists.txt  servKey.pem  servOut.pem
Server/src/: server.cpp
